add image to home page

--- a/css/1080.less
+++ b/css/1080.less
@@ -18,6 +18,10 @@
 	margin:auto;	
 }
 
+.page-body { /* body of each project page NOT including header */
+	max-width: 1260px; /* 1260px of columns + 2 x 10px margin = 1280px */
+}
+
 .figure_large {
 	display:none;	
 }
@@ -73,22 +77,17 @@
 /*** END GLOBAL ***/
 
 /*** HOME PAGE ***/
-.header-main {	
-	margin-bottom:75px;
+.header-main p {	
+	font-size: 3em;
 }
 
 .contact-icons {
-	float:right;
-	width:130px;
+	width: 130px;
 }
 
 i.icon-github,
 i.icon-linkedin {
-	font-size:60px;
-}
-
-.header-main p {	
-	font-size:3em;
+	font-size: 60px;
 }
 /*** END HOME PAGE ***/
 
