--- a/css/768.less
+++ b/css/768.less
@@ -21,45 +21,41 @@
 }
 /*** END GLOBAL STYLES ***/
 
-/*** HOME PAGE ***/
+/***** HOME PAGE *****/
 .home-page-container {
 	margin-bottom: 50px;	
 }
 
+.header-main {	
+	padding-left: 0;
+	padding-right: 0;
+	margin-bottom: 30px;	
+}
+
+/*** CONTACT ICONS ***/
 .contact-icons {
-	float: right;
 	width: 110px;
-	position: relative; /* positions relative to normal position */
-	top:25px;
-	margin-top:0;
-	/*display: block;*/
+	top: 25px;
+	margin-top: 0;
 	padding: 0;
 	margin: 0;
 }
-
-/*.contact-icons.max1260px {
-	padding: 0;
-	margin: 0;
-}*/
 
 i.icon-github,
 i.icon-linkedin {
-	font-size:50px;	
+	font-size: 50px;	
+}
+/*** END CONTACT ICONS ***/
+
+.home-page-text {
+	font-size: .95em;
 }
 
-.header-main p {
-	width:300px;	
-	font-size:2.5em;
+/* Process */
+.home-page-text h3 {
+	font-size: 1.5em;
 }
-
-.header-main {	
-	margin-bottom: 50px;
-	/*padding-left: percentage(20/980);
-	padding-right: percentage(20/980);*/
-	padding-left: 0;
-	padding-right: 0;
-}
-/*** END HOME PAGE ***/
+/***** END HOME PAGE *****/
 
 /***** UX PROJECTS PAGE *****/
 /*** MIXINS ***/
