--- a/css/768.less
+++ b/css/768.less
@@ -6,14 +6,30 @@
 	background-image: url("../images/grid-980px-.png");
 	background-position: center;
 	background-repeat: repeat-y;
+	/*max-width: 980px;*/
 }
 /*** END Grids for development only ***/
 
 /*** GLOBAL STYLES ***/
+/*.page-body {
+	max-width: 940px;
+}*/
+
+/*.max940px {
+	max-width: 940px;
+	margin: auto;
+}*/
+
 .max980px {
 	max-width:980px;
 	margin:auto;	
 }
+
+.max940px {
+	max-width:940px;
+	margin:auto;	
+}
+
 
 .section-label {
 	padding-left: 0;
@@ -225,8 +241,7 @@ i.icon-linkedin {
 
 /* PROJECT PAGES */
 .page-body {
-	padding-left: percentage(20/980);
-	padding-right: percentage(20/980);
+	max-width: 980px;
 }
 
 header .max1260px {
@@ -243,28 +258,42 @@ header .max1260px {
 #content-area-giddy-throng,
 #content-area-earthship-seattle,
 #content-area-joemicheals {
-	width: percentage(700/940);
-	/*background-color: #FFF8DC; */ /* Cornsilk */
+	/*width: percentage(700/940);*/
+	/*background-color: #FFF8DC;*/  /* Cornsilk */
+	width: percentage(620/940);
 }
 
 .projectDetails768 {
+	
+	& h1 {
+		font-size: 1.25em;
+	}
 		
 	& .project_details_p { 
-		float: left;
-		width: percentage(460/700); /* like the wire frames, 2/3 text, 1/3 image */
+		/*float: left;*/
+		/*width: percentage(460/700); *//* like the wire frames, 2/3 text, 1/3 image */
 		/*width: percentage(220/700);*/ /* 1/3 text, 2/3 image */
 		/*width: percentage(380/700);*/ /* 5/9 text, 4/9 image */
 		/*width: percentage(300/700); *//* 4/9 text, 5/9 image */	
-		padding-top: 0;
+		/*padding-top: 0;
 		padding-bottom: 0;
-		padding-left: 0;
-		overflow: hidden;
+		padding-left: 0;*/
+		/*overflow: hidden;*/
+		/*font-size: .9em;*/
+		
+		/*width: 100%;*/
+		/*-moz-column-count:2;
+		-moz-column-gap:1em;*/
+	}
+	
+	& p {
 		font-size: .9em;
+		float: none; /* allows text to float around the image */
 	}
 	
 	& figure {
-		float: right;
-		width: percentage(220/700); /* like the wire frames, 2/3 text, 1/3 image */
+		/*float: right;*/
+		/*width: percentage(220/700);*/ /* like the wire frames, 2/3 text, 1/3 image */
 		/*width: percentage(460/700);*/ /* 1/3 text, 2/3 image */
 		/*width: percentage(300/700); *//* 5/9 text, 4/9 image */
 		/*width: percentage(380/700);*/ /* 4/9 text, 5/9 image */
@@ -273,20 +302,61 @@ header .max1260px {
 		/*text-align: center;*/
 		
 		margin-right: 0;	
+		
+		/*clear: both;*/
+		/*display: inline;*/
 	}
 	
 	& figure img {
-		border: 2px solid grey;
+		/*border: 2px solid grey;*/
 		/*alignment-baseline: baseline;*/
+		/*display: inline;*/
 	}
 	
 	& figcaption {
 		margin-top: .8em;
+		/*display: inline;*/
+	}
+	
+	& .figure {
+		/*float: right;*/
+		/*width: percentage(220/700);*/ /* like the wire frames, 2/3 text, 1/3 image */
+		/*width: percentage(460/700);*/ /* 1/3 text, 2/3 image */
+		/*width: percentage(300/700); *//* 5/9 text, 4/9 image */
+		/*width: percentage(380/700);*/ /* 4/9 text, 5/9 image */
+		/*overflow: hidden;*/
+		/*border: 2px solid grey;*/
+		/*text-align: center;*/
+		
+		margin-right: 0;	
+		
+		/*clear: both;*/
+		/*display: inline;*/
+	}
+	
+	& .figure img {
+		border: 2px solid grey;
+		/*alignment-baseline: baseline;*/
+		/*display: inline;*/
+	}
+	
+	& blockquote {
+		text-align: center;	
 	}
 	
 	& img.no-border {
 		border: none;
 	}
+}
+
+.project_details_earthship_seattle p,
+#content-area-earthship-seattle h2,
+.project_details_earthship_seattle p {
+	/*-moz-column-count: 2;
+	width: 100%;
+	-moz-column-gap: 20px;*/
+	/*float: none;*/ /* allows text to float around the image */
+		
 }
 
 .project_details_recreate,
@@ -316,8 +386,15 @@ header .max1260px {
 #page-joemicheals #nav-sub-joemicheals  {
 	font-size: 1.1em;
 	line-height: 1.5; /* 24px / 16 px */
-	width: percentage(220/940);
+	/*width: percentage(220/940);*/
+	width: percentage(300/940);
 	/*background-color: #FFFDF4;*/
+	/*border-right: 1px solid #000;*/ /* A3A29E; */
+	/*border-top: 1px solid #000;
+	border-bottom: 1px solid #000;
+	border-left: 1px solid #000;*/
+	/*background-color: lightgrey;*/
+	/*padding: 20px 10px;*/
 }
 
 header img {
