--- a/css/mobile.less
+++ b/css/mobile.less
@@ -13,7 +13,7 @@
 	-moz-box-sizing:border-box;
 	-webkit-box-sizing:border-box;
 	box-sizing:border-box;	
-	font-family: "Century Gothic", Muli, "Trebuchet MS", "Helvetica", Arial, sans-serif;
+	font-family: 'Open Sans', "Century Gothic", Muli, "Trebuchet MS", "Helvetica", Arial, sans-serif;
 }
 
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
@@ -35,6 +35,10 @@ p {
 	padding:0 0 0 0;
 }
 
+h1, h2, h3, h4 {
+	font-family: Roboto;	
+}
+
 h2 {
 	margin-bottom:.5em;
 }
@@ -54,12 +58,7 @@ a:visited {
 /*  border instead of an underline, 
 underlines are notoriously inflexible. */
 
-a:hover {
-	border-bottom: 1px solid #333;
-	text-decoration: none;
-	border-bottom-color: #333;
-}
-
+a:hover,
 a:focus {
 	border-bottom: 1px solid #333;
 	text-decoration: none;
@@ -81,6 +80,10 @@ a:link img {
 	font-style: italic;	
 } 
 
+.strong {
+	font-weight: 600;	
+}
+
 figure a:link,
 figure a:hover,
 .logo a:link,
@@ -89,6 +92,10 @@ a.project:link,
 a.project:hover {
 	border-bottom:none;	
 	text-decoration:none;
+}
+
+.padding-top {
+	padding-top: 15px;	
 }
 
 /* RAVEN'S VERTICAL LISTS */
@@ -147,12 +154,16 @@ ul li ul {
 	
 	/* all paragraphs as a group in project_details */
 	& .project_details_p { 
-		margin-bottom:.7em;
+		/*margin-bottom:.7em;
 		float:left;
 		padding:0 0 1.7em 0;
 		font-size:.8em;
 		width:96%;
-		margin:auto;
+		margin:auto;*/
+	}
+	
+	& p {
+		font-size:.8em;
 	}
 	
 	& .pdf-link {
@@ -162,10 +173,11 @@ ul li ul {
 	/* div containing the image */
 	& figure {
 		width:96%;
+		margin-bottom: 1em;
 	}
 	
 	& figure img {
-		border: 2px solid grey;
+		border: 1px solid lightgrey;
 	}
 	
 	& figcaption {
