remove 'UX Projects' page
Mystery meat navigation defied principles of heuristic evaluation.

--- a/css/480.less
+++ b/css/480.less
@@ -240,7 +240,8 @@ nav {
 
 nav ul {
 	list-style-type:none;
-	width:460px;
+	/*width:460px;*/
+	width:320px;
 	margin:auto;
 	padding-bottom:35px;
 	padding-left:0;
@@ -388,7 +389,7 @@ i.icon-linkedin {
 
 /***** THE UX PROJECTS PAGE - ALL CIRCLE ICONS *****/
 #page-projects {
-	top: 100%;
+	/*top: 100%;*/
 	/*height: 100%;*/
 	/*height: 100vh;*/
 	visibility: visible;
@@ -898,21 +899,26 @@ header#header-earthship-seattle {
 /*** EACH PROJECT PAGE ***/
 /* First Project - 200% */
 #page-earthship-seattle {
-	top: 200%;
+	top: 100%;
 	.projectPages;
 }
 
 #page-giddy-throng {
-	top: 300%;
+	top: 200%;
 	.projectPages;
 }
 
 #page-nan {
-	top: 400%;
+	top: 300%;
 	.projectPages;
 }
 
 #page-reCreate {
+	top: 400%;
+	.projectPages;
+}
+
+#page-joemicheals {
 	top: 500%;
 	.projectPages;
 }
@@ -922,23 +928,18 @@ header#header-earthship-seattle {
 	.projectPages;
 }
 
-#page-joemicheals {
+#page-homeconnect {
 	top: 700%;
 	.projectPages;
 }
 
-#page-homeconnect {
+#page-trombone {
 	top: 800%;
 	.projectPages;
 }
 
-#page-trombone {
-	top: 900%;
-	.projectPages;
-}
-
 #page-major-exploration {
-	top: 1000%;
+	top: 900%;
 	.projectPages;
 }
 /* Last Project - 1000% */
@@ -947,7 +948,7 @@ header#header-earthship-seattle {
 
 /*** CONTACT PAGE ***/
 #page-contact {
-	top: 1100%;
+	top: 1000%;
 }
 
 fieldset {
