--- a/css/mobile.less
+++ b/css/mobile.less
@@ -190,7 +190,8 @@ ul li ul {
 	
 	& ul {
 		padding-bottom:.6em;
-		padding-left: 1.1em;	
+		padding-left: 1.1em;
+		font-size: .75em	
 	}
 	
 	& li {
@@ -590,7 +591,8 @@ nav ul {
 	list-style-type:none;
 	/*min-width:320px;*/
 	max-width: 480px;
-	width: 320px;
+	/*width: 320px;*/
+	width: 230px;
 	margin:auto;
 	padding-left: 0; /* removes global style */
 }
