--- a/css/1080.less
+++ b/css/1080.less
@@ -20,7 +20,7 @@
 
 .page-body { /* body of each project page NOT including header */
 	/*max-width: 1260px;*/ /* 1260px of columns + 2 x 10px margin = 1280px */
-	max-width: 940px;
+	/*max-width: 940px;*/
 	/*margin-left: percentage(10/940);
 	margin-right: percentage(10/940);*/
 	padding-left: 0;
