update home page

--- a/css/480.less
+++ b/css/480.less
@@ -309,6 +309,12 @@ nav li a {
 	line-height: 100px;
 }
 
+#home-page-container .page-body {
+	max-width: 940px;
+	overflow: hidden;
+	padding: 20px;
+}
+
 /*** CONTACT ICONS ***/
 .contact-icons {
 	max-width: none;
