--- a/css/mobile.less
+++ b/css/mobile.less
@@ -285,15 +285,19 @@ i.icon-linkedin {
 #home-page-container .page-body {
 	width: 96%;
 	margin: auto;
+	background-color: #5C7262;
+	color: #FFF;
+	padding: 10px 5px 10px 5px;
 }
 
 .home-page-text {
 	font-size: .85em;	
+	margin-bottom: 15px;
 }
 
 .home-page-text p:last-child {
 	padding-top: .375em;
-	display: none;	
+	/*display: none;*/
 }
 
 /* Welcome! */
@@ -308,7 +312,7 @@ i.icon-linkedin {
 }
 
 .home-image {
-	display: none;	
+	display: inline-block;
 }
 /***** END HOME PAGE *****/
 
@@ -609,7 +613,7 @@ nav {
 	bottom:0;
 	margin:auto;
 	/*visibility:visible;	*/
-	background-color:#4D4D4D;
+	background-color:#262626;
 }
 
 nav ul {
