add Rick Klu Art preview page

--- a/css/1080.less
+++ b/css/1080.less
@@ -58,6 +58,7 @@
 	}
 }
 
+.project_details_klu,
 .project_details_recreate,
 .project_details_nan,
 .project_details_mark,
@@ -70,6 +71,7 @@
 	.projectDetails1080;
 }
 
+#page-klu #nav-sub-klu,
 #page-nan #nav-sub-nan,
 #page-mark #nav-sub-mark,
 #page-reCreate #nav-sub-recreate,
