--- a/css/480.less
+++ b/css/480.less
@@ -260,6 +260,7 @@ nav li a {
 
 /*** GLOBAL TABLET NAV ***/
 /* SUB NAVIGATION */
+#nav-sub-klu,
 #nav-sub-recreate,
 #nav-sub-nan,
 #nav-sub-mark,
@@ -272,6 +273,7 @@ nav li a {
 	display:block !important;	
 }
 
+#nav-collapse-klu,
 #nav-collapse-recreate,
 #nav-collapse-nan,
 #nav-collapse-mark,
@@ -789,6 +791,7 @@ header#header-earthship-seattle {
 	padding-bottom: 1%;	
 }
 
+#content-area-klu,
 #content-area-recreate,
 #content-area-nan,
 #content-area-mark,
@@ -802,6 +805,7 @@ header#header-earthship-seattle {
 }
 
 /* list of project nav items */
+.project_details_klu,
 .project_details_recreate,
 .project_details_nan,
 .project_details_mark,
@@ -820,6 +824,7 @@ header#header-earthship-seattle {
 /***** END GLOBAL - PROJECT PAGES *****/
 
 /*** SUB-NAVIGATION ***/
+#nav-sub-klu,
 #nav-sub-nan,
 #nav-sub-mark,
 #nav-sub-recreate,
