--- a/css/768.less
+++ b/css/768.less
@@ -250,6 +250,7 @@ header .max1260px {
 	padding-right: percentage(20/980);
 }
 
+#content-area-klu,
 #content-area-recreate,
 #content-area-nan,
 #content-area-mark,
@@ -360,6 +361,7 @@ header .max1260px {
 		
 }
 
+.project_details_klu,
 .project_details_recreate,
 .project_details_nan,
 .project_details_mark,
@@ -376,6 +378,7 @@ header .max1260px {
 	font-size:0.85em;
 }
 
+#page-klu #nav-sub-klu,
 #page-nan #nav-sub-nan,
 #page-mark #nav-sub-mark,
 #page-reCreate #nav-sub-recreate,
