--- a/css/mobile.less
+++ b/css/mobile.less
@@ -285,8 +285,8 @@ i.icon-linkedin {
 #home-page-container .page-body {
 	width: 96%;
 	margin: auto;
-	background-color: #5C7262;
-	color: #FFF;
+	background-color: rgba(92, 114, 98, 0.3);
+	color: #000;
 	padding: 10px 5px 10px 5px;
 }
 
@@ -575,6 +575,7 @@ header#header-joemicheals {
 	padding-bottom:1%;	
 }
 
+#content-area-klu,
 #content-area-recreate,
 #content-area-nan,
 #content-area-mark,
@@ -590,6 +591,7 @@ header#header-joemicheals {
 }
 
 /* the nav items */
+.project_details_klu,
 .project_details_recreate,
 .project_details_nan,
 .project_details_mark,
@@ -702,6 +704,7 @@ nav a:focus {
 	border-bottom:none;		
 }
 
+#nav-sub-klu,
 #nav-sub-nan,
 #nav-sub-recreate,
 #nav-sub-mark,
@@ -714,6 +717,7 @@ nav a:focus {
 	.nav-sub-mixin;		
 }
 
+#nav-collapse-klu,
 #nav-collapse-nan,
 #nav-collapse-recreate,
 #nav-collapse-mark,
